<resources>
    <string name="app_name">APK 1</string>
    <string name="app_name_2">APK 2</string>
    <string name="bottom_top_stories">Top Stories</string>
    <string name="bottom_india">India</string>
    <string name="bottom_world">World</string>
    <string name="bottom_sports">Sports</string>

    <string name="desc_top_stories">Showing Top Stories</string>
    <string name="desc_india">Showing India news list</string>
    <string name="desc_world">Showing World news list</string>
    <string name="desc_sports">Showing Sports news list</string>

    <string name="desc_top_stories_detail">Showing Top Stories detail</string>
    <string name="desc_india_detail">Showing India news detail</string>
    <string name="desc_world_detail">Showing World news detail</string>
    <string name="desc_sports_detail">Showing Sports news detail</string>


    <string name="msg_no_news">No News found</string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="read_more">Read More…</string>
    <string name="default_notification_channel_id">DCB_channel_ID</string>
    <string name="default_notification_channel_name">DCB_channel_name</string>


    <string name="bottom_home">Home</string>
    <string name="bottom_list">List</string>
    <string name="bottom_myinstane">Alerts</string>
    <string name="bottom_alerts">Alerts</string>
    <string name="bottom_profile">Profile</string>
    <string name="bottom_acstatus">AC Status</string>
    <string name="server_url">http://config.universaltrack.in/api/</string>
    <string name="custom_url">http://3.7.33.26:3000/</string>
    <string name="socket_url">ws://config.universaltrack.in/api/socket</string>
    <string name="login">Login</string>
    <string name="detail">Detail</string>
    <string name="playback">Playback</string>
    <string name="tracking">Tracking</string>
    <string name="no_device_found">No Device Found</string>
    <string name="battery">Battery: </string>
    <string name="select_date_and_time_of_playback">Select date and time of playback</string>
    <string name="msg_token_fmt">FCM registration Token: %s</string>
    <string name="yes">OK</string>
    <string name="text_all">All</string>
    <string name="text_online">Online</string>
    <string name="text_offline">Offline</string>
    <string name="text_inactive">Inactive</string>
    <string name="msg_no_events">No events found.</string>
    <string name="moving">MOVING</string>
    <string name="stopped_time">Stopped Time</string>
    <string name="idling_time">Idling Time</string>
    <string name="ignition">Ignition</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="text_password">Password</string>
    <string name="text_username">Username</string>
    <string name="text_remember_me">Remember me</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="this_week">This Week</string>
    <string name="last_week">Last Week</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="text_logout">Logout</string>
    <string name="text_others">Others</string>
    <string name="text_settings">Settings</string>
    <string name="text_contact_us">Contact Us</string>
    <string name="desc_contact_us"> Please contact us in case you have any concern.</string>
    <string name="text_version">Version</string>
    <string name="text_share">Share</string>
    <string name="notification_with_sound">Show Notifications</string>
    <string name="notification_description">Enable/disable background notifications.</string>
    <string name="notification_with_vibration">Notification with vibration</string>
    <string name="notifications">Notifications</string>
    <string name="text_rate">Rate App</string>
    <string name="notification_setting">Notification Settings</string>
    <string name="title_devices">Devices</string>
    <string name="desc_devices">Device Status List</string>
    <string name="desc_home">Real-time location updates</string>
    <string name="desc_alerts">All Events</string>
    <string name="text_hide">Hide</string>
    <string name="text_expired_devices">Expired Devices</string>
    <string name="text_show_me">Show</string>
    <string name="text_ignore">Ignore</string>
    <string name="title_expiring_devices">Expiring Devices</string>
    <string name="title_oops">Oops!!!</string>
    <string name="title_no_internet">No Internet!!!</string>
    <string name="msg_no_internet">Slow or no internet available. Please check your network connection and try again.</string>
    <string name="login_failed">Something went wrong. Please check UserName and Password and try again.</string>
    <string name="error_subscription">Something went wrong. No Subscriptions available..</string>
    <string name="text_ok">OK</string>
    <string name="text_exit">Exit</string>
    <string name="text_retry">Retry</string>
    <string name="text_cancel">Cancel</string>
    <string name="contact_name_number">Amal Kumar (9006279999)</string>
    <string name="text_call">Call</string>
    <string name="slowest">Slowest (1X)</string>
    <string name="slower">Slower  (2X)</string>
    <string name="normal">Normal  (4X)</string>
    <string name="faster">Faster  (8X)</string>
    <string name="fastest">Fastest  (16X)</string>
    <string name="msg_no_alerts">No alerts found.</string>
    <string name="msg_alert_disabled">All Alerts disabled for this device.</string>
    <string name="device_detail">Device Detail</string>
    <string name="title_console">Console</string>
    <string name="title_live_tracking">Live Tracking</string>
    <string name="title_my_account">My Account</string>
    <string name="title_more_details">More Details</string>
    <string name="title_reports">Reports</string>
    <string name="text_details">Details</string>
    <string name="text_navigation">Navigation</string>
    <string name="text_command">Command</string>
    <string name="text_geofence">Geofence</string>
    <string name="msg_feature_not_available">This Feature will be available on next Update.</string>
    <string name="text_ac_report">AC Report</string>
    <string name="text_report">Report</string>
    <string name="show_address">Show Address</string>
    <string name="text_moving">Moving</string>
    <string name="authenticate">Authenticate</string>
    <string name="text_email">Email</string>
    <string name="text_phone_number">Phone Number</string>
    <string name="association">Association</string>
    <string name="hint_otp">Enter OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="title_registration_for_dcb">Registration for DCB</string>
    <string name="title_my_radisys">My Radisys</string>
    <string name="title_billing_details">Billing Details</string>
    <string name="msg_no_subscription">No Subscriptions Found</string>
    <string name="title_subscription_detail">Subscription Details</string>
    <string name="title_billing_detail">Billing Details</string>
    <string name="subscribe">Subscribe</string>
    <string name="title_subscription_selected">Selected subscription</string>
    <string name="title_subscription_cost">Cost of subscription</string>
    <string name="title_digital_service_name">Digital Service Name</string>
    <string name="title_amount_payable">Amount Payable</string>
    <string name="title_service_opted">Service Opted</string>
    <string name="title_payment_option">Payment Option</string>
    <string name="purchase">Purchase</string>
    <string name="payment_1">DCB</string>
    <string name="payment_2">PayTm</string>
    <string name="payment_3">Google Pay</string>
    <string name="payment_4">Phone Pay</string>
    <string name="payment_5">Debit Card</string>
    <string name="payment_6">Credit Card</string>
    <string name="transaction_completed">Transaction completed successfully</string>
    <string name="transaction_failed">Something went wrong. Transaction failed.</string>
    <string name="something_went_wrong">Something went wrong.</string>
    <string name="total_billing_amount">Total Billing Amount</string>
    <string name="billing_date">Billing Date</string>
    <string name="current_statement">Current Statement</string>
    <string name="text_date">Date</string>
    <string name="text_service_bought">Service bought</string>
    <string name="text_amount">Amount</string>
    <string name="title_transaction">Transaction History</string>
    <string name="msg_no_transaction_found">No transactions found</string>

</resources>