<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    tools:context=".view.activities.LoginActivity">

    <include layout="@layout/custom_toolbar" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appBar"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/full_xl"
        android:text="@string/title_registration_for_dcb"
        android:textColor="@color/textDarkPrimary"
        android:textSize="@dimen/text_header" />

    <LinearLayout
        android:id="@+id/llLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:paddingHorizontal="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/full"
            android:hint="@string/text_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:lines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/full"
            android:hint="@string/text_phone_number">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:lines="1"
                android:maxLength="10" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cbRememberMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/half"
            android:checked="true"
            android:text="@string/text_remember_me" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_bg"
            android:gravity="center"
            android:text="@string/authenticate"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llOtp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:layout_marginBottom="@dimen/full"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:visibility="gone"
        tools:visibility="visible">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/full"
            android:hint="@string/hint_otp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etOTP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:lines="1"
                android:maxLength="6" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvResendOtp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:paddingHorizontal="@dimen/full"
            android:paddingVertical="@dimen/half"
            android:text="@string/resend_otp"
            android:textColor="@color/textDarkPrimary"
            android:textSize="@dimen/text_caption" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAssociation"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_bg"
            android:gravity="center"
            android:text="@string/association"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</RelativeLayout>